half working log

--- a/index.html
+++ b/index.html
@@ -167,11 +167,10 @@
       font-family: monospace;
       color: #ddd;
       background-color: #000;
-      min-height: 10em;
-      max-height: 10em;
+      height: 10em;
       padding: 10px;
       overflow: hidden;
-      width: 100%;
+      margin-right: 5px;
     }
   </style>
 </head>
@@ -191,8 +190,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquerymx-3.2.custom.js"></script>
   <script src="js/jquery.jqote2.min.js"></script>
-  <script src="js/jquery.mousewheel.min.js"></script>
-  <script src="js/jquery.mCustomScrollbar.js"></script>
+  <script src="js/jquery.nicescroll.js"></script>
   <script src="js/underscore-min.js"></script>
   <script src="js/bot_ui.js"></script>
 
