--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     }
 
     .reorder-list:empty {
-      display: none;
+      border: 1px dashed #aaa;
     }
 
     .reorder-list li {
@@ -370,6 +370,19 @@
       width: 55%;
     }
 
+    #selected-bot {
+      padding: 5px;
+      text-align: right;
+    }
+
+    #selected-bot *{
+     width: auto;
+    }
+
+     #selected-bot .bs-game {
+      padding-right: 5px;
+     }
+
     .bs-server {
       display: inline-block;
       text-align: right;
@@ -402,6 +415,8 @@
         <div class="pull-right">
           <i class="icon-caret-down"></i>
         </div>
+      </div>
+      <div id="selected-bot" class="span8">
       </div>
     </div>
     <div class="row-fluid">
@@ -455,12 +470,25 @@
         <div class="span4 column1">
           <span class="span12"><%= this.label %></span>
         </div>
-        <div class="span4 column1">
+        <div class="span4 column3">
         </div>
-        <div class="span4 column1">
+        <div class="span4 column3">
           <input type="checkbox" checked="<%= this.state %>"/>
           <div class="placeholder"></div>
         </div>
+      </div>
+    ]]>
+  </script>
+
+  <script type="text/x-jqote-template" id="tmpl_dropdown">
+   <![CDATA[
+      <div class="row-fluid">
+        <div class="span4 column1">
+          <span class="span12"><%= this.label %></span>
+        </div>
+        <div class="span4 column2">
+        </div>
+        <select class="span4 column3"></select>
       </div>
     ]]>
   </script>
@@ -474,7 +502,7 @@
         <div class="span4 column2">
           <div class="input-append span12">
             <input class="span9" type="text"/>
-            <button class="span3 btn" type="button">Add</button>
+            <button class="span3 btn" type="button"><i class="icon-plus"></i></button>
           </div>
         </div>
         <div class="span4 column3">
@@ -561,17 +589,24 @@
     ]]>
   </script>
 
+  <script type="text/x-jqote-template" id="tmpl_dropdown_items">
+   <![CDATA[
+      <% for (var i in this.list) { %>
+        <option><%= this.list[i] %></option>
+      <% } %>
+    ]]>
+  </script>
+
   <script type="text/x-jqote-template" id="tmpl_botswitcher_list">
    <![CDATA[
    <ul class="unstyled">
       <% for (var bot in this.list) { %>
           <li>
-          <a href="#">
-            <% var package = this.list[bot]['package'].slice(-2); %>
-            <span class="bs-game"><%= package %>: </span>
-            <span>
-              <b><%= this.list[bot]['username'] %></b>
-            </span>
+          <% var encodedId = encodeURIComponent(bot); %>
+          <a href="#" data-botid="<%= encodedId %>">
+            <% var package = bot.slice(0,2); %>
+            <span class="bs-game"><%= package %>:</span>
+            <span><b><%= bot.slice(6) %></b></span>
             <span class="pull-right bs-server">
               <% var serverTag = bot.slice(3,5); %>
               <span><%= serverTag %></span>
@@ -612,7 +647,7 @@
       var server = function(arg) {
         var update = _.bind(this.update, this);
         _.delay(update, 250, arg);
-  //      widgets.logger.update(initMessages[_.random(0, initMessages.length)]);
+      //widgets.logger.update(initMessages[_.random(0, initMessages.length)]);
       };
 
       var initMessages = [
@@ -638,15 +673,16 @@
         "[DEBUG][30.12 16:28:41][pg_sy_oclife ] getting pennerbar",
         "[INFO ][30.12 16:28:41][pg_sy_oclife ] sleeping 84965s"
       ];
-
+/*
       function makeContainer() {
         var widgets = {
           button: new ToggleButton("Flaschen verkaufen", server, ToggleButton.states.OFF),
           input: new TextInput("Min. Verkaufspreis", server, "default Value"),
           checkbox: new Checkbox("Min. Verkaufspreis", server),
           textlist: new TextInputList("Gegner", server, ["Anti-Flag", "Rise Against", "Rage Against the Mashine"]),
-          listlist: new ListInputList("Playlist", server, ["Anti-Flag", "Rise Against", "Rage Against the Mashine"]),
+          listlist: new ListInputList("Playlist", server, ["Anti-Flag", "Rise Against", "Rage Against the Mashine"], ["Anti-Flag"]),
           slider: new SliderInput("WTF", server, 0.1, 2, 0.1, 1),
+          dropdown: new Dropdown("Lieblingsband", server, ["Anti-Flag", "Rise Against", "Rage Against the Mashine"]),
           logger: new Log("Log", initMessages)
         };
         return new WidgetContainer(widgets);
@@ -661,12 +697,13 @@
         "Weiterbildung": makeContainer(),
       };
 
-      var vatbs = new VTabs(containerMap, $("#app"));
-
-      var botdata = {"kv_sf_oclife":{"modules":{"boost":{"active":"0","maxmissinghealth":"5","maxmissingsatisfaction":"5","wastetolerance":"0"},"looting":{"active":"1","area":"M\\u00FCllraum","area_from":"M\\u00FCllraum,K\\u00FChlhaus,M\\u00FCllcontainer,Dusche f\\u00FCr harte Jungs,Giftm\\u00FCll-Entsorgung,Spirituosenlager,Block A,Farb-Lager,Dusche,Intensivstation,Lackiererei,Hof,Sportplatz,Block B,Waschraum,Lager,Wachraum,Krankenstation,Holzwerkstatt,Wartezimmer,Jungfrauendusche,Trockenraum,Gl\\u00FCcksspielecke,Kraftraum,Aufenthaltsraum der W\\u00E4rter,Werkstatt,Bibliothek,Kantine,B\\u00FCro des Direktors,K\\u00FCche,Speisesaal der W\\u00E4rter","auto_area":"0","caught_strategy":"bribe","caught_strategy_from":"bribe,soap,risk","gangtoll_strategy":"payToll","gangtoll_strategy_from":"payToll","timeslot":"0","timeslot_from":"0,1,2,3,4,5,6"},"mission":{"active":"1","mission_index":"2","missions":"","missions_from":"Hauptmission,Flirt-Kurs,Geld eintreiben,Müllräume säubern,Wäschetransport,Vom Gesellen zum Chefkoch,Lackierermeister,Aller Anfang ist schwer,Informationsaustausch,Sparringspartner,Erobere dir deinen Platz,Mach dir einen Namen,Heizkörper reparieren,Zelle einrichten,Nagerabschussrampe,Eiskalte Engel,Wer ist hier Psycho?,Was war los?,Burn, Direx, Burn!,In 80 Tagen aus dem Knast,Schallisolation,Der gute Samariter,Stadtguerilla-Trainingscamp,Wolke 7,Die wundersamen Wundersamen,Gib mir noch Zeit,Lenk den Wärter ab,Die Wundersalbe,Ärger machen,Ausbruchshelfer"},"train":{"active":"0","timeslot":"0","timeslot_from":"0,1,2,3,4,5,6","type":"mental","type_from":"mental,physical"}},"package":"packages/kv","proxy":"62.113.200.202:3128","server":"http://www.knastvoegel.de","username":"oclife","wait_time_factor":"1"},"pg_sy_oclife":{"modules":{"collect":{"active":"0"},"crime":{"active":"0","crime":"","crime_from":""},"fight":{"active":"0","auto":"0","blocklist":"","victims":""},"sell":{"active":"0","amount":"0","continuous":"0","price":"-1"},"study":{"active":"1","alcohol":"1","training_index":"1","trainings":"agi,","trainings_from":"att,def,agi,sprechen,bildungsstufe,musik,sozkontakte,konzentration,pickpocket"}},"package":"packages/pg","proxy":"91.228.53.28:3128","server":"http://sylt.pennergame.de","username":"oclife","wait_time_factor":"1"}};
+    //  var vatbs = new VTabs(containerMap, $("#app"));
+*/
+      var botdata = {"kv_sf_\"disabled":{"modules":{"boost":{"active":"0","maxmissinghealth":"5","maxmissingsatisfaction":"5","wastetolerance":"0"},"looting":{"active":"1","area":"M\\u00FCllraum","area_from":"M\\u00FCllraum,K\\u00FChlhaus,M\\u00FCllcontainer,Dusche f\\u00FCr harte Jungs,Giftm\\u00FCll-Entsorgung,Spirituosenlager,Block A,Farb-Lager,Dusche,Intensivstation,Lackiererei,Hof,Sportplatz,Block B,Waschraum,Lager,Wachraum,Krankenstation,Holzwerkstatt,Wartezimmer,Jungfrauendusche,Trockenraum,Gl\\u00FCcksspielecke,Kraftraum,Aufenthaltsraum der W\\u00E4rter,Werkstatt,Bibliothek,Kantine,B\\u00FCro des Direktors,K\\u00FCche,Speisesaal der W\\u00E4rter","auto_area":"0","caught_strategy":"bribe","caught_strategy_from":"bribe,soap,risk","gangtoll_strategy":"payToll","gangtoll_strategy_from":"payToll","timeslot":"0","timeslot_from":"0,1,2,3,4,5,6"},"mission":{"active":"1","mission_index":"2","missions":"","missions_from":"Hauptmission,Flirt-Kurs,Geld eintreiben,Müllräume säubern,Wäschetransport,Vom Gesellen zum Chefkoch,Lackierermeister,Aller Anfang ist schwer,Informationsaustausch,Sparringspartner,Erobere dir deinen Platz,Mach dir einen Namen,Heizkörper reparieren,Zelle einrichten,Nagerabschussrampe,Eiskalte Engel,Wer ist hier Psycho?,Was war los?,Burn, Direx, Burn!,In 80 Tagen aus dem Knast,Schallisolation,Der gute Samariter,Stadtguerilla-Trainingscamp,Wolke 7,Die wundersamen Wundersamen,Gib mir noch Zeit,Lenk den Wärter ab,Die Wundersalbe,Ärger machen,Ausbruchshelfer"},"train":{"active":"0","timeslot":"0","timeslot_from":"0,1,2,3,4,5,6","type":"mental","type_from":"mental,physical"}},"package":"packages/kv","proxy":"62.113.200.202:3128","server":"http://www.knastvoegel.de","username":"\"disabled","wait_time_factor":"1"},"pg_sy_oclife":{"modules":{"collect":{"active":"0"},"crime":{"active":"0","crime":"","crime_from":""},"fight":{"active":"0","auto":"0","blocklist":"","victims":""},"sell":{"active":"0","amount":"0","continuous":"0","price":"-1"},"study":{"active":"1","alcohol":"1","training_index":"1","trainings":"agi,","trainings_from":"att,def,agi,sprechen,bildungsstufe,musik,sozkontakte,konzentration,pickpocket"}},"package":"packages/pg","proxy":"91.228.53.28:3128","server":"http://sylt.pennergame.de","username":"oclife","wait_time_factor":"1"}};
       var packages = {"packages":[{"name":"pg","servers":["http://berlin.pennergame.de","http://buenosaires.mendigogame.com","http://koeln.pennergame.de","http://krakow.menelgame.pl","http://marseille.clodogame.fr","http://muenchen.pennergame.de","http://reloaded.clodogame.fr","http://reloaded.mendigogame.es","http://reloaded.menelgame.pl","http://reloaded.pennergame.de","http://sampa.faveladogame.com","http://sylt.pennergame.de","http://www.bomzhuj.ru","http://www.bumrise.ae","http://www.bumrise.com","http://www.clodogame.fr","http://www.dossergame.co.uk","http://www.faveladogame.com","http://www.mendigogame.es","http://www.menelgame.pl","http://www.pennergame.de","http://www.serserionline.com"],"fight":{"module":"Kämpfen","victims":{"input_type":"list_textfield","display_name":"Gegner"},"auto":{"input_type":"checkbox","display_name":"Downfight Gegner"},"active":{"input_type":"toggle","display_name":"Kämpfen starten"}},"crime":{"module":"Verbrechen","crime":{"input_type":"dropdown","display_name":"Verbrechen"},"active":{"input_type":"toggle","display_name":"Verbrechen begehen"}},"study":{"module":"Weiterbildungen","trainings":{"input_type":"list_list","display_name":"Weiterbildungen"},"alcohol":{"input_type":"checkbox","display_name":"Betrinken"},"active":{"input_type":"toggle","display_name":"Weiterbildungen starten"}},"sell":{"module":"Flaschen verkaufen","active":{"input_type":"toggle","display_name":"Flaschen verkaufen"},"price":{"input_type":"textfield","display_name":"Verkaufspreis"},"amount":{"input_type":"textfield","display_name":"Verkaufsmenge"},"continuous":{"input_type":"checkbox","display_name":"Dauerverkaufsmodus"}},"collect":{"module":"Flaschen sammeln","active":{"input_type":"toggle","display_name":"Sammeln gehen"}}},{"name":"kv","servers":["http://www.knastvoegel.de"],"looting":{"module":"Plunder","timeslot":{"input_type":"dropdown","display_name":"Zeit"},"gangtoll_strategy":{"input_type":"dropdown","display_name":"Bandensteuer Strategie"},"active":{"input_type":"toggle","display_name":"Sammeln starten"},"auto_area":{"input_type":"checkbox","display_name":"Autom. Sammelgebiet"},"caught_strategy":{"input_type":"dropdown","display_name":"Gefasst Strategie"},"area":{"input_type":"dropdown","display_name":"Sammelgebiete"}},"boost":{"module":"Boost","maxmissinghealth":{"input_type":"textfield","display_name":"Max. fehlende Gesund."},"active":{"input_type":"toggle","display_name":"Boost starten"},"wastetolerance":{"input_type":"textfield","display_name":"Max. Verschwendung (%)"},"maxmissingsatisfaction":{"input_type":"textfield","display_name":"Max. fehlende Befr."}},"train":{"module":"Training","type":{"input_type":"dropdown","display_name":"Art"},"timeslot":{"input_type":"dropdown","display_name":"Dauer"},"active":{"input_type":"toggle","display_name":"Training starten"}},"mission":{"module":"Mission","missions":{"input_type":"list_list","display_name":"Missionen"},"active":{"input_type":"toggle","display_name":"Mission starten"}}}]};
-  
-      new BotSwitcher(botdata);
+
+      var creator = new InterfaceCreator(botdata, packages, $("#app"));
+//      $("#app").append(creator.makeControlPanel("kv_sf_\"disabled"));
     });
   </script>
 </body>
